--- a/src/lazypplnav.html
+++ b/src/lazypplnav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">LazyPPL</a>
+    <a class="navbar-brand" href="Index.html">LazyPPL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,9 +11,9 @@
             Regression examples
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="Regression.html">Linear and piecewise linear</a></li>
-            <li><a class="dropdown-item" href="Wiener.html">Wiener process regression</a></li>
-            <li><a class="dropdown-item" href="ProgramInduction.html">Program induction</a></li>
+            <li><a class="dropdown-item" href="RegressionDemo.html">Linear and piecewise linear</a></li>
+            <li><a class="dropdown-item" href="WienerDemo.html">Wiener process regression</a></li>
+            <li><a class="dropdown-item" href="ProgramInductionDemo.html">Program induction</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -21,7 +21,7 @@
             Other examples
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="Clustering.html">Non-parametric clustering</a></li>
+            <li><a class="dropdown-item" href="ClusteringDemo.html">Non-parametric clustering</a></li>
             <li><a class="dropdown-item" href="ControlFlowDemo.html">Program transformations</a></li>
           </ul>
         </li>
