--- a/src/lazypplnav.html
+++ b/src/lazypplnav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="Index.html">LazyPPL</a>
+    <a class="navbar-brand" href="index.html">LazyPPL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,7 +25,7 @@
             <li><a class="dropdown-item" href="ControlFlowDemo.html">Program transformations</a></li>
           </ul>
         </li>
-            <li class="nav-item"><a href="https://bitbucket.org/lazyppl" class="nav-link">Source at BitBucket</a></li>
+            <li class="nav-item"><a href="https://bitbucket.org/lazyppl/lazyppl-src/" class="nav-link">Source at BitBucket</a></li>
       </ul>
     </div>
   </div>
