added gp demo, removed codedmessages from package.yaml for now

--- a/pandoc/lazypplnav.html
+++ b/pandoc/lazypplnav.html
@@ -11,9 +11,10 @@
             Regression examples
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="RegressionDemo.html">Linear and piecewise linear</a></li>
+            <li><a class="dropdown-item" href="RegressionDemo.html">Linear and piecewise linear</a></li> 
+            <li><a class="dropdown-item" href="GaussianProcessDemo.html">Gaussian process regression</a></li>
             <li><a class="dropdown-item" href="WienerDemo.html">Wiener process regression</a></li>
-            <li><a class="dropdown-item" href="ProgramInductionDemo.html">Program induction</a></li>
+           <li><a class="dropdown-item" href="ProgramInductionDemo.html">Program induction</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
