docs reference arxiv paper and Tweag.

--- a/pandoc/lazypplnav.html
+++ b/pandoc/lazypplnav.html
@@ -28,6 +28,7 @@
             <li><a class="dropdown-item" href="ControlFlowDemo.html">Program transformations</a></li>
           </ul>
         </li>
+            <li class="nav-item"><a href="https://arxiv.org/abs/2212.07250" class="nav-link">Paper at arxiv</a></li>
             <li class="nav-item"><a href="https://bitbucket.org/lazyppl/lazyppl-src/" class="nav-link">Source at BitBucket</a></li>
       </ul>
     </div>
