Update of template files (removed bitbucket) + generate_website.sh

--- a/pandoc/lazypplnav.html
+++ b/pandoc/lazypplnav.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">LazyPPL</a>
+    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="45" height="45" class="align-top d-inline-block" alt="LazyPPL"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="mb-2 navbar-nav me-auto mb-lg-0">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Regression examples
@@ -26,10 +26,15 @@
             <li><a class="dropdown-item" href="IrmDemo.html">Infinite relational model</a></li>
             <li><a class="dropdown-item" href="AdditiveClusteringDemo.html">Indian Buffet Process</a></li>
             <li><a class="dropdown-item" href="ControlFlowDemo.html">Program transformations</a></li>
+            <li><a class="dropdown-item" href="GraphDemo.html">Graph inference</a></li>
           </ul>
         </li>
-            <li class="nav-item"><a href="https://arxiv.org/abs/2212.07250" class="nav-link">Paper at arxiv</a></li>
-            <li class="nav-item"><a href="https://bitbucket.org/lazyppl/lazyppl-src/" class="nav-link">Source at BitBucket</a></li>
+            <li class="nav-item"><a href="https://dl.acm.org/doi/abs/10.1145/3571239" class="nav-link"><i class="ai ai-acm"></i>
+</a></li>
+<li class="nav-item"><a href="https://arxiv.org/abs/2212.07250" class="nav-link"><i class="ai ai-arxiv"></i>
+</a></li>
+            <li class="nav-item"><a href="https://github.com/lazyppl-team/lazyppl" class="nav-link"><i class="fa-brands fa-github"></i></a></li>
+
       </ul>
     </div>
   </div>
