--- a/pandoc/lazypplnav.html
+++ b/pandoc/lazypplnav.html
@@ -22,6 +22,7 @@
             Other examples
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="MinimalDemo.html">Minimal demonstration</a></li>
             <li><a class="dropdown-item" href="ClusteringDemo.html">Non-parametric clustering</a></li>
             <li><a class="dropdown-item" href="IrmDemo.html">Infinite relational model</a></li>
             <li><a class="dropdown-item" href="AdditiveClusteringDemo.html">Indian Buffet Process</a></li>
