--- a/pandoc/lazypplnav.html
+++ b/pandoc/lazypplnav.html
@@ -28,6 +28,7 @@
             <li><a class="dropdown-item" href="AdditiveClusteringDemo.html">Indian Buffet Process</a></li>
             <li><a class="dropdown-item" href="ControlFlowDemo.html">Program transformations</a></li>
             <li><a class="dropdown-item" href="GraphDemo.html">Graph inference</a></li>
+            <li><a class="dropdown-item" href="Physics.html">Inference in a physics model</a></li>
           </ul>
         </li>
             <li class="nav-item"><a href="https://dl.acm.org/doi/abs/10.1145/3571239" class="nav-link"><i class="ai ai-acm"></i>
